found error in function that continued column endlessly, fixed and now works, added flex to this style of solution and flex wrap ensures no spacing

--- a/style.css
+++ b/style.css
@@ -27,11 +27,16 @@ body {
   order: 3;
 }
 .container {
+  display: flex;
+  flex-wrap: wrap;
   background-color: aliceblue;
   height: 600px;
   width: 600px;
   order: 2;
-  border: 5px solid black;
+  padding: 0;
+  margin: 0;
+  border: none;
+  position: relative;
 }
 .square {
   margin: 0;
